# rawaccel-profile-manager

./: LICENSE  README.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  default_settings.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: autostart.rs  config.rs  error.rs  hotkey.rs  lib.rs  main.rs  notifications.rs  profile.rs  rawaccel.rs  tray.rs  watcher.rs
src/api/: tauri.ts
src/components/AutoSwitch/: MappingList.tsx  MappingRow.tsx
src/components/Layout/: BlockerOverlay.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/Modals/: ConfirmDelete.tsx  ErrorModal.tsx  MappingModal.tsx  RenameProfile.tsx
src/components/Profile/: ProfileCard.tsx  ProfileList.tsx
src/components/Settings/: AppearanceSettings.tsx  DataManagement.tsx  DeveloperSettings.tsx  GeneralSettings.tsx  NotificationSettings.tsx  RawAccelSettings.tsx
src/components/Wizard/: Wizard.tsx
src/components/Wizard/steps/: DownloadStep.tsx  FinishStep.tsx  InstallStep.tsx  PathStep.tsx  WelcomeStep.tsx
src/components/ui/: Button.tsx  Input.tsx  Toggle.tsx
src/hooks/: useAppVersion.ts  useConfig.ts  useErrorModal.ts  useNotification.ts  useProcessWatcher.ts  useProfiles.ts  useTheme.ts
src/store/: useStore.ts
src/styles/: themes.css
src/types/: index.ts
src/utils/: keyboardBlocker.ts
src/views/: AboutView.tsx  AutoSwitchView.tsx  ProfilesView.tsx  SettingsView.tsx
