[package]
name = "rawaccel-profile-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rawaccel_profile_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.53.0", features = ["rt-multi-thread", "macros", "time", "process", "fs", "io-util"] }
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2.4.3"
thiserror = "2.0.18"
uuid = { version = "1.24.0", features = ["serde", "v4"] }
sysinfo = "0.39.6"
chrono = { version = "0.4.45", features = ["serde"] }
winreg = "0.56.0"
is_elevated = "0.1.2"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
serial_test = "3"

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[lints.clippy]
redundant_clone = "deny"
needless_collect = "deny"
large_enum_variant = "warn"

[lints.rust]
warnings = "deny"
